Set up file structure, added more files, set up venv

--- a/docs/logbook/20251014.md
+++ b/docs/logbook/20251014.md
@@ -1,2 +1,5 @@
 October 14th 2025 (Ashirvad):
-- 
+- Added docs and models folders, set up logbook and procedures
+- Imported all the modules
+- Received the IMU sensor, Breadboard, Jumper wires, and LED's + 220 Ohm resistors today
+- Pushed all updates to the github repo
