added scripts and test files, added folders to models.

--- a/docs/logbook/20251014.md
+++ b/docs/logbook/20251014.md
@@ -3,3 +3,4 @@ October 14th 2025 (Ashirvad):
 - Imported all the modules
 - Received the IMU sensor, Breadboard, Jumper wires, and LED's + 220 Ohm resistors today
 - Pushed all updates to the github repo
+- Began setting up a virtual environment using the command prompt and VSCODE terminal
