made an led flash with led.py script

--- a/docs/logbook/20251015.md
+++ b/docs/logbook/20251015.md
@@ -3,3 +3,5 @@ October 15th 2025 (Ashirvad):
 - Fixed issues regarding pushing commits to github
 - Added a virtual environment, used .gitignore files, and checked the requirements.txt file
 - Double chekced all imports worked
+- Set up Raspberry Pi, formatted SD card, and set up HDMI cable to the monitor
+- Made an LED flash using a resistor, breadboard, and the Raspberry Pi and run a script on the computer to make it flash every second
