new csv files + changed code from data collection to sensor testing and collected raw data

--- a/docs/logbook/20251017.md
+++ b/docs/logbook/20251017.md
@@ -1,1 +1,4 @@
 October 17th 2025 (Ashirvad):
+- Made part of the sensor.py file to collect gps data
+- Oh no! The imu module had to be soldered, so we returned it and bought a presoldered device. This is the reason why the project is slightly delayed. It will be coming tomorrow
+- Logged 30 minutes of raw GPS data
