added imucsv.py, logged imu data, and updated logbook

--- a/docs/logbook/20251017.md
+++ b/docs/logbook/20251017.md
@@ -2,3 +2,5 @@ October 17th 2025 (Ashirvad):
 - Made part of the sensor.py file to collect gps data
 - Oh no! The imu module had to be soldered, so we returned it and bought a presoldered device. This is the reason why the project is slightly delayed. It will be coming tomorrow
 - Logged 30 minutes of raw GPS data
+- Visualized all data for the gps module using pandas and folium
+- I might need to clean up my workspace and work with a virtual environment to make sure no issues happen, and I have to push updates to the github repo more oftens
